# cmake-app-catch2-valgrind

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  compelete_run.sh  readme.md  run.sh  test.sh  valgrind.sh
data/: test.csv
inc/: ringbuffer.h
src/: CSV.hpp  Container.cpp  Container.hpp  ExampleClass.cpp  ExampleClass.hpp  Shared.cpp  Shared.hpp  Subject.cpp  Subject.hpp  TestClass.cpp  TestClass.hpp  main.cpp  ringbuffer.c
tests/: main.cpp  ringbuffer_tests.cpp  test_csv.cpp  test_example_class.cpp  test_testclass.cpp
